--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -155,6 +155,12 @@
   margin-left: 5px;
 }
 
+.para-click{
+  cursor: pointer;
+  margin: 0;
+  padding: 0;
+}
+
 @media only screen and (max-width: 700px) {
   .placeSearch,
   .productSearch,
